# infant-face-detection

./: .gitignore  CMakeLists.txt  README.md  infant_face_detection.cpp
